--- a/frontend/src/pages/user/home/Home.css
+++ b/frontend/src/pages/user/home/Home.css
@@ -2,7 +2,7 @@
 .home_container{
     margin-top: 40px;
     display: grid ;
-    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+    grid-template-columns: repeat(3,1fr);
     padding:0 100px;
     gap:30px;  
     
