--- a/frontend/src/components/user/map/Map.css
+++ b/frontend/src/components/user/map/Map.css
@@ -14,6 +14,11 @@
     word-wrap: break-word;
     text-align: center;
 }
+
+.map p{
+    padding: 20px 50px;
+    text-align: center;
+}
 /* Lower z-index for the map container */
 .leaflet-container {
     z-index: 1; /* You can adjust this to a lower value */
@@ -21,13 +26,12 @@
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     height: 50vh;
   }
-  
+
   /* If you want to ensure that markers, popups, or other elements stay on top */
   .leaflet-marker-icon {
     z-index: 1000; /* Set higher z-index for markers */
   }
-  
+
   .leaflet-popup {
     z-index: 9999; /* Set higher z-index for popups */
   }
-  
