--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -42,6 +42,15 @@ button{
 li{
   font-size: 20px;
   font-family:"poppins";
+
+}
+a{
+    text-decoration: none;
+    color: black;
+}
+
+.dark_mode{
+    box-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
 }
 @media (min-width: 768px) and (max-width: 1024px) {
   h1,
