--- a/frontend/src/components/user/dashboardCard/DashboardCard.css
+++ b/frontend/src/components/user/dashboardCard/DashboardCard.css
@@ -1,9 +1,29 @@
-.DashboardCard_container{
-    padding: 10px 20px 20px 20px;
-    background-color: white;
-    box-shadow: 0 8px 10px rgba(0, 0, 0, 0.5);
+.DashboardCard_container {
+    padding: 20px 20px 20px 20px;
     border-radius: 10px;
     text-align: center;
     width: 200px;
     height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background-color: white;
+    transition: transform 0.3s ease-in-out;
+}
+.DashboardCard_container:hover{
+    transform: scale(1.04);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.6);
+}
+.DashboardCard_container.dark_mode {
+    padding: 20px 20px 20px 20px;
+    border-radius: 10px;
+    text-align: center;
+    width: 200px;
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    box-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
 }
