--- a/frontend/src/components/user/feedCard/FeedCard.css
+++ b/frontend/src/components/user/feedCard/FeedCard.css
@@ -3,7 +3,19 @@
     justify-content: center;
     align-items: center;
     background-color: white;
-    box-shadow: 0 8px 8px rgba(0, 0, 0, 0.3);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    width: 60%;
+    padding: 20px 10px;
+    border-radius: 10px;
+    margin: 0px 10px 50px 50px;
+    overflow: hidden;
+}
+.feed_card.dark_mode{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: black;
+    box-shadow: 0 0 10px rgba(255, 255, 255, 0.3);
     width: 60%;
     padding: 20px 10px;
     border-radius: 10px;
