--- a/frontend/src/components/user/weather/WeatherCard.css
+++ b/frontend/src/components/user/weather/WeatherCard.css
@@ -1,19 +1,17 @@
-.weather_card{
+.weather_card {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     gap: 10px;
-    background-color: white;
-    box-shadow: 0 8px 10px rgba(0, 0, 0, 0.5);
     border-radius: 10px;
+    padding: 30px;
 }
-.weather_img img{
+.weather_img img {
     width: 200px;
-
 }
 
-.weather_info{
+.weather_info {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -21,13 +19,14 @@
     margin: 30px;
     flex-wrap: wrap;
 }
-.weather_info_heading{
+.weather_info_heading {
     display: flex;
-    text-align:left;
+    text-align: left;
     width: 100%;
 }
 .temperature {
-    background-image:linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url(../../../../assets/celsius.jpg);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
+        url(../../../../assets/celsius.jpg);
     width: 200px;
     height: 120px;
     background-size: cover; /* Ensures the image fills the div */
@@ -41,10 +40,10 @@
     color: white;
     padding: 10px;
 }
-
 
 .wind {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),url(../../../../assets/windmill.avif);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
+        url(../../../../assets/windmill.avif);
     width: 200px;
     height: 120px;
     background-size: cover; /* Ensures the image fills the div */
@@ -57,12 +56,11 @@
     color: white;
     flex-direction: column;
     padding: 10px;
-
 }
 
-
 .sunrise {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),url(../../../../assets/sunrise.jpg);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
+        url(../../../../assets/sunrise.jpg);
     width: 200px;
     height: 120px;
     background-size: cover; /* Ensures the image fills the div */
@@ -75,11 +73,11 @@
     color: white;
     flex-direction: column;
     padding: 10px;
-
 }
 
 .sunset {
-    background-image:linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url(../../../../assets/sunset.jpeg);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
+        url(../../../../assets/sunset.jpeg);
     width: 200px;
     height: 120px;
     background-size: cover; /* Ensures the image fills the div */
@@ -92,33 +90,31 @@
     color: white;
     flex-direction: column;
     padding: 10px;
-
 }
 
-
-@media(max-width:480px){
-    h1{
+@media (max-width: 480px) {
+    h1 {
         font-size: 30px;
     }
-    h2{
+    h2 {
         font-size: 25px;
     }
-    h3{
+    h3 {
         font-size: 20px;
     }
-    .weather_info{
+    .weather_info {
         flex-direction: column;
     }
-    .temperature{
-        width:300px;
+    .temperature {
+        width: 300px;
     }
-    .wind{
-        width:300px;
+    .wind {
+        width: 300px;
     }
-    .sunrise{
-        width:300px;
+    .sunrise {
+        width: 300px;
     }
-    .sunset{
-        width:300px;
+    .sunset {
+        width: 300px;
     }
 }
