--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -49,8 +49,9 @@ a{
     color: black;
 }
 
-.dark_mode{
-    box-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
+
+::-webkit-scrollbar{
+    display: none;
 }
 @media (min-width: 768px) and (max-width: 1024px) {
   h1,
