--- a/frontend/src/components/auth/Login.css
+++ b/frontend/src/components/auth/Login.css
@@ -61,10 +61,10 @@
 }
 
 
-input:focus::placeholder{
+.in:focus::placeholder{
     color: rgb(100, 100, 187);
 }
-input{
+.in{
     background-color:transparent;
     width: 100%;
     padding: 10px 10px 5px;
@@ -73,11 +73,11 @@ input{
     font-size: 16px;
     border-bottom: 2px solid blue;
 }
-h1{
+.h1-tag{
     font-size: 27px;
 }
 
-label{
+.lab{
     position: absolute;
     left: 10px;
     top: 10px;
@@ -87,12 +87,12 @@ label{
     margin-top: 25px;
     transition: all 0.3s ease;
 }
-input{
+.in{
     margin-top: 25px;
 }
 
-input:focus + label,
-input:not(:placeholder-shown)+label {
+.in:focus + label,
+.in:not(:placeholder-shown)+label {
     top: -10px;
     left:5px;
     font-size: 12px;
@@ -117,7 +117,7 @@ input:not(:placeholder-shown)+label {
     background-color: darkblue;
 }
 
-svg{
+.svg-icon{
     width: 42px;
     height: 65px;
     position: absolute;
@@ -125,11 +125,11 @@ svg{
     top: 70%;
     transform: translateY(-50%);
 }
-a{
+.a-tag{
     color: blue;
     font-size: 18px;
 }
-a:hover{
+.a-tag:hover{
     color: darkblue;
 }
 
@@ -152,15 +152,15 @@ a:hover{
         height: 100vh;
         background-color: white;
     }
-    h1{
+    .h1-tag{
         font-size: 20px;
     }
-    svg{
+    .svg-icon{
         transform: translateY(-40%);
         left:0;
     }
 
-    label,input{
+    .lab,.in{
         margin-top: 7.5px;
         width: 75%;
         margin-left: 40px;
@@ -172,7 +172,7 @@ a:hover{
         margin-top: 20px;
         width: 30vw;
     }
-    a{
+    .a-tag{
         font-size: 15px;
     }
 }
@@ -195,14 +195,14 @@ a:hover{
         height: 100vh;
         margin: 10px;
     }
-    h1{
+    .h1-tag{
         font-size: 25px;
     }
-    svg{
+    .svg-icon{
         transform: translateY(-15%);
     }
 
-    label,input{
+    .lab,.in{
         margin-top: 25px;
     }
 
@@ -228,20 +228,20 @@ a:hover{
         justify-content: center;
     }
 
-    input{
+    .in{
         width: 85%;
         margin-left: 30px;
         margin-top: 15px;
     }
-    label{
+    .lab{
         margin-left: 25px;
         margin-top: 15px;
     }
-    svg{
+    .svg-icon{
         left:-25px;
         transform: translateY(-50%);
     }
-    h1{
+    .h1-tag{
         font-size: 24px;
     }
     .login-btn{
